tests/NormalTests/paczka1/fuzzy1/21258229.err
Error in line 5: A780 A800 91,8
Error in line 34: GThzeLfyxvu S255 19,8
Error in line 38: Of2iL A800 57,6
